deploy/k8s/production-scale/overlays/staging/admin-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
spec:
  replicas: 1
